@media queries do not take zooming into account https://bugs.webkit.org/show_bug.cgi?id=53186

Patch by John Mellor <johnme@chromium.org> on 2013-03-08
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Fixes @media width and height to take into account full page zoom, by
adding code to MediaQueryEvaluator's width/heightMediaFeatureEval,
corresponding to the existing code in Element::clientWidth which makes
document.documentElement.clientWidth take into account page zoom.

Test: fast/media/mq-width-pagezoom.html

* css/MediaQueryEvaluator.cpp:
(WebCore::heightMediaFeatureEval):
(WebCore::widthMediaFeatureEval):

LayoutTests:

* fast/media/mq-width-pagezoom-expected.html: Added.
* fast/media/mq-width-pagezoom.html: Added.

Canonical link: https://commits.webkit.org/130218@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145233 268f45cc-cd09-0410-ab3c-d52691b4dbfc